--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,4 +3,5 @@ VERSION 0  CHANGING TO RMT RELEASES
 ===================================
 
    Version 0.3 - changing to RMT releases
+      09/05/2014 16:31  0.3.6  enforcing user agent prefixed with "PhealNG/$version ". o/ [CCP]FoxFour!
       13/02/2014 15:09  0.3.5  initial release
